--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.kinikumuda.multikurir_driverapp"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -62,7 +62,7 @@ dependencies {
     //firebaseui
     implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
     //firebase database
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     //dexter
     implementation 'com.karumi:dexter:6.1.2'
     //location
@@ -83,5 +83,20 @@ dependencies {
 //    implementation 'com.google.firebase:firebase-messaging:17.0.0'
 //    implementation 'com.google.firebase:firebase-core:16.0.0'
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
+    //circular progress bar
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    //loading button
+    implementation "com.github.koushikcse:loading-button-android:1.0"
 
 }
