--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,6 @@ dependencies {
     //loading button
     implementation "com.github.koushikcse:loading-button-android:1.0"
 
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+
 }
